[backend]:
 - сброс пароля
