# src/main/java/com/gearit/api/service/password/PasswordService.java
@@ -1,15 +1,17 @@
 package com.gearit.api.service.password;
 
-import com.gearit.api.entity.notification.*;
-import com.gearit.api.entity.user.*;
-import com.gearit.api.exception.*;
-import com.gearit.api.service.notification.*;
-import com.gearit.api.service.passwordrecovery.*;
-import com.gearit.api.service.user.*;
-import java.util.*;
-import org.slf4j.*;
-import org.springframework.beans.factory.annotation.*;
-import org.springframework.stereotype.*;
+import com.gearit.api.entity.notification.NotificationTemplate;
+import com.gearit.api.entity.user.PasswordRecovery;
+import com.gearit.api.entity.user.UserProvider;
+import com.gearit.api.exception.WebClientException;
+import com.gearit.api.service.notification.NotificationService;
+import com.gearit.api.service.passwordrecovery.PasswordRecoveryService;
+import com.gearit.api.service.user.UserProviderService;
+import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
 @Service
 public class PasswordService {
@@ -32,7 +34,7 @@ public class PasswordService {
     }
 
     /**
-     * Отправляет пользователю на почту уведомление с ссылкой на восстановление пароля
+     * Отправляет пользователю на почту уведомление со ссылкой на восстановление пароля
      *
      * @param email - адрес электронной почты пользователя
      */
@@ -45,13 +47,23 @@ public class PasswordService {
                 userProvider,
                 Map.of("code", passwordRecovery.getCode())
         );
+
         logger.info("Password recovery code: {}, sent to user with email: {}", passwordRecovery.getCode(), email);
     }
 
-    public void verifyCode(String code) {
+    public PasswordRecovery verifyCode(String code) {
         var passwordRecovery = passwordRecoveryService.getPasswordRecoveryByCode(code);
         if (passwordRecovery == null) {
             throw new WebClientException("Password user recovery failed", "Recovery code sent is invalid.");
         }
+
+        return passwordRecovery;
+    }
+
+    public void resetPassword(String code, String newPassword) {
+        var passwordRecovery = verifyCode(code);
+        Long userId = passwordRecovery.getUserProviderId();
+
+        userProviderService.updateUserProviderPassword(userId, newPassword);
     }
 }
